<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">Моё приложение</string>
    <string name="action_settings">Настройки</string>
    <string name="hint_brand">Марка</string>
    <string name="hint_model">Модель</string>
    <string name="button_save">Сохранить</string>
    <string name="empty_not_saved">Авто не сохранено, потому что оно пусто</string>
    <string name="add_word">Добавить авто</string>
    <string name="save">Сохранить</string>
    <string name="delete_all_cars">Удалить все авто</string>
    <string name="search">Search</string>
    <string name="sort">Сортировать</string>
    <string name="sort_by_brand">Сортировать по марке</string>
    <string name="sort_by_model">Сортировать по модели</string>
    <string name="delete_all_checked_cars">Удалить выделенные авто</string>
    <string name="show_all_checked">Показать все выделенные</string>
    <string name="json">Использовать json</string>
    <string name="use_db">Использовать БД</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="refresh">Обновить</string>
</resources>
